클래스 별 css 스타일 적용

--- a/form/form6.html
+++ b/form/form6.html
@@ -26,12 +26,19 @@
         <label for ="">전화번호</label>
             <input type="text" required/>
             </div>
-            <div><select name ="" id>
-                option value = "">포도</optiocn>
-                option value = "" selceteerkalected>사과</optiocn>
-                option value = "">바나/ption>
-
-            </select></div>
+            <select name="" id="">
+                <option value="">포도</option>
+                <option value="" selected>사과</option>
+                <option value="">바나나</option>
+                <option value="">딸기</option>
+              </select>
+            </div>
+            <div>
+                <textarea name="" id="" cols="30" rows="3">
+                 이것이 자바다
+                 자바는 어렵다
+                </textarea>
+              </div>
       </fieldset>
       <button type ="submit" >보내기</button>
     </form>
